[package]
name = "gui"
version = "0.1.0"
authors = ["Erlend Langseth <erlend.langseth@openanalytics.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winput = { path = "../universe/crates/winput"}
paste = "0.1.6"
mopa = "0.2.2"
derive_deref = { git = "https://github.com/Ploppz/derive_deref.git" }
winit = "0.20.0-alpha4"
cgmath = "0.17.0"

[dev-dependencies]
cgmath = "0.17.0"
