[package]
name = "gui"
version = "0.1.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1.6"
mopa = "0.2.2"
derive_deref = { git = "https://github.com/Ploppz/derive_deref.git" }
winit = "0.20.0-alpha4"
winput = { git = "https://github.com/Ploppz/winput.git"}
cgmath = "0.17.0"
uuid = {version = "0.8.1", features = ["v4"]}
indexmap = "1.3.0"

[dev-dependencies]
cgmath = "0.17.0"
