[package]
name = "gui"
version = "0.1.28"
authors = ["Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1.6"
mopa = "0.2.2"
derive_deref = { git = "https://github.com/Ploppz/derive_deref.git" }
winit = "0.22.0"
winput = { git = "https://github.com/Ploppz/winput.git", tag = "v0.5.5"}
cgmath = "0.17.0"
uuid = { version = "0.8.1", features = ["v4"] }
indexmap = "1.3.2"
slog = "2.5.2"
slog-term = { version = "2.5.0", optional = true }
ptree = "0.2.1"
gui-derive = { path = "../gui-derive"}
bimap = "0.4.0"
